tests/toy/neg/001604_mutation.toylang
program a = { while a do bool sleep; } .
